[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/GUI/Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/Decoracion/Money/Sprites/Moneda/coin.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Sprites/lifebar-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Sprites/lifebar-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Sonidos/Muerte.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/GUI/Fonts/NokiaCellphoneFC.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/GUI/Fonts/NokiaCellphoneFC.ttf"

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Assets/GUI/Fonts/NokiaCellphoneFC.ttf"

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = SubResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "GameOver"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.658824 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Inicio"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 5.0
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 22, 32 )
texture = ExtResource( 2 )
hframes = 4

[node name="MoneyContainer" type="HBoxContainer" parent="."]
margin_left = 32.0
margin_top = 26.0
margin_right = 377.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MoneyContainer"]
margin_right = 5.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Sonido" type="Node" parent="."]

[node name="GameOver" type="AudioStreamPlayer" parent="Sonido"]
stream = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.658824 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -30.0
margin_bottom = 30.0

[node name="GameOver" type="Label" parent="Control/VBoxContainer"]
margin_right = 384.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Mensaje" type="Label" parent="Control/VBoxContainer"]
margin_top = 49.0
margin_right = 384.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 9 )
text = "Has Muerto"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 3 )
anims/Inicio = SubResource( 5 )

[connection signal="value_changed" from="TextureProgress" to="." method="_on_TextureProgress_value_changed"]
[connection signal="finished" from="Sonido/GameOver" to="." method="_on_GameOver_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
